changed to grid layout instead of flex for spacing bug on home and saved page

--- a/movie-app-mvc/wwwroot/css/site.css
+++ b/movie-app-mvc/wwwroot/css/site.css
@@ -25,11 +25,12 @@ body {
 
 /* Design */
 .card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(185px, 1fr));
+    grid-gap: 20px;
     margin: 2em 2em;
 }
+
 
 .card {
     width: 185px;
